using Andrew's index.Rmd

--- a/about.html
+++ b/about.html
@@ -9,10 +9,9 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Andrew McDavid" />
 
 
-<title>BST430 - Introduction to Statistical Computing</title>
+<title>Notes on github classrooms and rstudio cloud</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -362,121 +361,58 @@ pre code {
 
 
 
-<h1 class="title toc-ignore">BST430 - Introduction to Statistical
-Computing</h1>
-<h4 class="author">Andrew McDavid</h4>
-<h4 class="date">2022-Aug-27 (updated: 2022-08-31 by TL)</h4>
+<h1 class="title toc-ignore">Notes on github classrooms and rstudio
+cloud</h1>
 
 </div>
 
 
-<div id="administrivia" class="section level1">
-<h1>Administrivia</h1>
-<p>TTh 11:00-12:40, SRB 1410 <br> <strong>Instructor</strong>: Tanzy
-Love <br> <strong>Website</strong>: <a href="https://urmc-bst.github.io/bst430-fall2022-site/" class="uri">https://urmc-bst.github.io/bst430-fall2022-site/</a> <br> <a href="static/Syllabus_DRAFT.pdf"><strong>Syllabus</strong></a></p>
-</div>
-<div id="content" class="section level1">
-<h1>Content</h1>
-<ol start="0" style="list-style-type: decimal">
-<li><a href="lecture/l00-intro.html">Introduction</a>
-<ul>
-<li><a href="https://forms.gle/yJ8NVHbsJmanSywz9">Survey</a></li>
-</ul></li>
-<li><a href="lecture/l01-meet-toolkit.html">Meet the toolkit</a>
-<ul>
-<li>Invites to rstudio cloud and github class room are on <a href="https://learn.rochester.edu">blackboard</a></li>
-<li>Req readings: r4ds 3.1-3.5, 4. Optional: <a href="https://happygitwithr.com/" class="uri">https://happygitwithr.com/</a>
-<!-- * Resources: [rstudio](https://www.rstudio.com/products/rstudio/download/#download) https://cran.r-project.org/ --></li>
-</ul></li>
-<li><a href="lecture/l02-ggplot2-i.html">ggplot(i)</a>
-<ul>
-<li>CandyWeight for real.</li>
-<li>Lab 1 <a href="hw_lab_instruction/lab01-hello-r.html">instructions</a> and repo
-(accept GH classroom invite). Due 5pm Sept 3.</li>
-</ul></li>
-<li><a href="lecture/l03-transform-dplyr-i.html">dplyr(i)</a>
-<ul>
-<li>Continue working on lab 1</li>
-</ul></li>
-<li><a href="lecture/l04-data-types.html">Data types in R</a>. Finish
-dplyr(i) lecture.
-<ul>
-<li>HW 1 assigned. <a href="hw_lab_instruction/hw-01-airbnb/hw-01-airbnb.html">instructions</a>
-and repo (accept GH classroom invite). Due 5pm EDT, Sept 13.</li>
-</ul></li>
-<li><a href="lecture/l05a-reshape-merge.html">Reshaping and combining
-data frames</a>. Finish data types lecture.
-<ul>
-<li><a href="hw_lab_instruction/lab02-merge-conflict/lab02-merge-conflict.html">Lab
-2</a>. You will need to accept an invitation to join the URMC-BST
-organization to get access to your repositories to complete these. Most
-labs will be completed <strong>in groups</strong> going forward – if you
-cannot attend class in person for whatever reason, let me know and I’ll
-set up zoom so you can participate <strong>synchronously and
-remotely.</strong></li>
-</ul></li>
-<li>Finish L5a.
-<ul>
-<li><a href="hw_lab_instruction/lab03-laquinta-uno/lab03-laquinta-uno.html">Lab
-3</a>. To be completed in same group as lab 2.</li>
-</ul></li>
-<li><a href="lecture/l05b-advanced-dplyr.html">dplyr(ii)</a>, <a href="lecture/l06-style.html">styleguide</a>
-<ul>
-<li><a href="hw_lab_instruction/lab04-laquinta-dos/lab04-laquinta-dos.html">Lab
-4</a>. New groups!</li>
-</ul></li>
-<li><a href="lecture/l07-factors-dates.html">Factors and dates</a>
-<ul>
-<li><a href="hw_lab_instruction/hw02-accidents/hw02-accidents.html">HW
-2</a> assigned.</li>
-</ul></li>
-<li>Effective data visualization <a href="https://youtu.be/ZrifrBvFWgg">video</a> and <a href="https://rstudio-education.github.io/datascience-box/course-materials/slides/u2-d14-effective-dataviz/u2-d14-effective-dataviz.html#1">slides</a>,
-<a href="https://rstudio.cloud/spaces/162296/project/2929636">rstudio.cloud
-project</a> and <a href="https://docs.google.com/forms/d/e/1FAIpQLSdHAZGSFmErFF0FnZNRgbrxOPfcjFAQsjNA2Xlj-SdsOnWyqw/viewform?usp=sf_link">quiz</a>.
-<ul>
-<li>Continue working on lab 4.</li>
-</ul></li>
-<li><a href="lecture/l09-data-from-files.html">Data from files</a>
-<ul>
-<li><a href="hw_lab_instruction/lab05-sadplots/lab05-sadplots.html">Lab
-5 assigned</a></li>
-<li>Andrew’s office hours will be at 4:30 Thursday this week.</li>
-</ul></li>
-<li>Work on lab 5.</li>
-<li><a href="lecture/l10-text.html">Text processing</a>
-<ul>
-<li>Discuss lab 5. <a href="hw_lab_instruction/hw03-fatal-geography/hw03-fatal-geography.html">HW
-3 assigned</a>.</li>
-<li>Reading: <a href="https://r4ds.had.co.nz/strings.html">r4ds chapter
-14</a></li>
-</ul></li>
-<li>Continue L10.</li>
-<li><a href="lecture/l11-linear-algebra-indexing.html">Matrices,
-indexing, linear algebra</a>
-<ul>
-<li><a href="hw_lab_instruction/lab06-covid-times/lab06-covid-times.html">Lab
-6</a> assigned.</li>
-</ul></li>
-<li>Continue with matrices / linear algebra and Lab 6.</li>
-<li><a href="lecture/l12-functions.html">Functions i</a>, continue to
-work on lab6.</li>
-<li><a href="lecture/l13-functions-ii.html">Functions ii and
-iteration</a>. <a href="hw_lab_instruction/hw04-wrangle-r/hw04-wrangle-r.html">HW04</a>
-(Due 5PM Nov 5)</li>
-<li><a href="lecture/l14-debugging.html">Knitr tricks and debugging</a>.
-<a href="hw_lab_instruction/lab07-generative-art/lab07-generative-art.html">Lab
-07</a> due 5PM Nov 12. <a href="lecture/lab07-art-notes.html">Lab 07
-notes</a>.</li>
-<li><a href="lecture/l15-linear-models.html">Linear models</a></li>
-<li><a href="lecture/l16-multivariate-lm.html">Multivariate linear
-models</a></li>
-<li><a href="lecture/l17-prediction-logistic.html">Prediction and
-logistic regression</a>
-<ul>
-<li><a href="hw_lab_instruction/hw05-modeling-gss/hw-05-modeling-gss.html">HW5</a>
-due 24 Nov. <!--22.  Resampling and hypothesis testing--></li>
-</ul></li>
+<div id="rstudio-cloud" class="section level2">
+<h2>Rstudio cloud</h2>
+<ol style="list-style-type: decimal">
+<li>Students will need to link their rstudio cloud account to github and
+enable private repos. RSC is good about prompting for when attempting to
+create a project from a private repo.</li>
+<li>Less obviously, you will need to enable 3rd-party API access from
+the GH classroom organization. Note that I don’t entirely understand the
+security implications, rstudio probably should find a way to invite
+access via the github API rather than requiring carte blanche
+access.</li>
+<li>Remind students to use the class workspace on RSC, not their default
+workspaces (or they’ll run out of compute..)</li>
+<li>It’s amazing how much compute your class will burn. The calculated
+usage seemed to be about 2x what students self-reported that their
+homework took. I only had 9 students, and don’t know if it would be
+tenable to use RSC in a larger classroom.</li>
 </ol>
+</div>
+<div id="github-classrooms" class="section level2">
+<h2>Github classrooms</h2>
+<p>Even if you use the github classroom web api, you’ll want to install
+Mine Cetinkaya-Rundel and colleagues’ excellent <a href="https://rundel.github.io/ghclass/articles/articles/ghclass.html">ghclass</a>
+package. I used it to</p>
+<ul>
+<li>Set up team assignments</li>
+<li>Push edits to existing assignments</li>
+<li>Clone all student repos for grading, branching, and other
+housekeeping</li>
+<li>Unwatch student repos, so you aren’t buried in github spam whenever
+your students make commits</li>
+<li>Branch against the initial commit (useful for grading via pull
+requests)</li>
+</ul>
+<p>At some point, I will post excerpts from the script I used to manage
+assignments.</p>
+<div id="grading-with-github-classrooms" class="section level3">
+<h3>Grading with github classrooms</h3>
+<p>You can use pull requests, but you’ll need to make sure you have a
+branch created against the initial commit. (See previous bullet).
+Although you can do this post-hoc, life will be easier if you do it
+ahead of time. I could not figure out a good way to collaborate with TAs
+in the grading without sending the students (pre-mature and possibly
+incorrect) feedback. Basically, a way to mute a pull request before it’s
+submitted would be useful.</p>
+</div>
 </div>
 
 
